<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="205dp"
        android:layout_height="110dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher_round"
        app:layout_constraintBottom_toTopOf="@id/appNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appNameText"
        android:layout_width="291dp"
        android:layout_height="87dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appLogo" />

    <TextView
        android:id="@+id/name1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="serif-monospace"
        android:text="@string/nur_waheeda_binti_rosli"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/developersText" />

    <TextView
        android:id="@+id/matrixandclass2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/id_2021106547_class_rcs2405a_course_ict602"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name1Text" />


    <TextView
        android:id="@+id/copyright_statementText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2023_my_electricity_calculator_all_rights_reserved"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matrixandclass2Text"
        app:layout_constraintVertical_bias="0.86" />

    <TextView
        android:id="@+id/developersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:fontFamily="serif-monospace"
        android:text="@string/student_information"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/github"
        android:layout_width="66dp"
        android:layout_height="58dp"
        app:srcCompat="@drawable/github"
        tools:layout_editor_absoluteX="341dp"
        tools:layout_editor_absoluteY="32dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
